--- a/TongHopGK/fragment/src/main/resources/templates/fragments/content.html
+++ b/TongHopGK/fragment/src/main/resources/templates/fragments/content.html
@@ -9,7 +9,7 @@
 
     <!-- Right Column (30%) -->
     <div class="col-md-4">
-      <img th:src="@{/images/sample.jpg}" alt="Placeholder Image" class="img-fluid rounded shadow">
+      <img th:src="@{/images/image.webp}" alt="Placeholder Image" class="img-fluid rounded shadow">
     </div>
   </div>
 </main>
