--- a/TongHopGK/fragment/src/main/resources/templates/fragments/header.html
+++ b/TongHopGK/fragment/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,24 @@
 <!-- header.html -->
 <header th:fragment="header" class="bg-primary text-white text-center py-3">
     <h1>Header Section</h1>
+
+    <!-- Navigation Menu -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-2">
+        <div class="container">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                    <a class="nav-link text-white" th:href="@{/}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" th:href="@{/about}">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" th:href="@{/list}">List</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" th:href="@{/addNew}">Add New</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </header>
