Bai Tong Hop GK

--- a/TongHopGK/fragment/src/main/resources/templates/fragments/header.html
+++ b/TongHopGK/fragment/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <!-- header.html -->
 <header th:fragment="header" class="bg-primary text-white text-center py-3">
-    <h1>Header Section</h1>
+    <img src="/images/image.webp" alt="Logo" style="height: 50px;">
 
     <!-- Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-2">
