Bai Thi Giua Ky

--- a/HoTienQuoc_CV_SinhVien/src/main/resources/templates/fragments/footer.html
+++ b/HoTienQuoc_CV_SinhVien/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,10 @@
-<footer th:fragment="footer" class="bg-dark text-white text-center py-3">
-    <p>&copy;2025 by Ho Tien Quoc - Fit.NTU</p>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<body>
+<footer th:fragment="footer" class="footer mt-auto py-3 text-center">
+    <div class="container">
+        <span class="text-muted">©2025 by Ho Tien Quoc – FIT NTU</span> <!-- Thay Student Name -->
+    </div>
 </footer>
+</body>
+</html>
