--- a/HoTienQuoc_CV_SinhVien/src/main/resources/templates/index.html
+++ b/HoTienQuoc_CV_SinhVien/src/main/resources/templates/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="layout :: content">
+<html xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{layout :: layout(~{::title}, ~{:: #page_content_id})}">
+<head>
+    <title>Dashboard</title>
+</head>
 <body>
-<div>
-    <h3>Trang Chủ</h3>
-    <p>Chào mừng bạn đến với trang web sử dụng Thymeleaf + Bootstrap.</p>
+<div id="page_content_id">
+
 </div>
 </body>
 </html>
