--- a/HoTienQuoc_CV_SinhVien/src/main/resources/templates/fragments/sidebar.html
+++ b/HoTienQuoc_CV_SinhVien/src/main/resources/templates/fragments/sidebar.html
@@ -1,11 +1,41 @@
-<nav th:fragment="sidebar" class="col-md-3 col-lg-2 d-md-block bg-dark text-white sidebar vh-100 p-3">
-  <h4>Sidebar</h4>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<body>
+<div th:fragment="sidebar" class="position-sticky pt-3">
   <ul class="nav flex-column">
     <li class="nav-item">
-      <a class="nav-link text-white" href="/index">Home</a>
+      <a class="nav-link" th:href="@{/}"
+         th:classappend="${#httpServletRequest.getRequestURI() == '/' ? 'active' : ''}"
+         aria-current="page">
+        Dashboard
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link text-white" href="/about">About</a>
+      <a class="nav-link" th:href="@{/topic/list}"
+         th:classappend="${#strings.startsWith(#httpServletRequest.getRequestURI(), '/topic/list') ? 'active' : ''}">
+        Topic - List
+      </a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" th:href="@{/topic/add}"
+         th:classappend="${#strings.startsWith(#httpServletRequest.getRequestURI(), '/topic/add') ? 'active' : ''}">
+        Topic - Add New
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" th:href="@{/student/list}"
+         th:classappend="${#strings.startsWith(#httpServletRequest.getRequestURI(), '/student/list') ? 'active' : ''}">
+        Student - List
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" th:href="@{/student/add}"
+         th:classappend="${#strings.startsWith(#httpServletRequest.getRequestURI(), '/student/add') ? 'active' : ''}">
+        Student - Add New
+      </a>
+    </li>
+    <!-- Thêm các link khác nếu cần -->
   </ul>
-</nav>
+</div>
+</body>
+</html>
