--- a/HoTienQuoc_CV_SinhVien/src/main/resources/templates/index.html
+++ b/HoTienQuoc_CV_SinhVien/src/main/resources/templates/index.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layout :: layout(~{::title}, ~{:: #page_content_id})}">
-<head>
-    <title>Dashboard</title>
-</head>
-<body>
-<div id="page_content_id">
-
+<div th:fragment="content">
+  <h1>Content</h1>
 </div>
-</body>
-</html>
